<resources>
    <string name="app_name">Corrochano_JoséIMDbAPP</string>
    <string name="client_id">582937957307-dpp2eatvls7re6rtsm2hshvicb27a09n.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Top 10</string>
    <string name="menu_gallery">Favoritas</string>
    <string name="menu_slideshow">Buscar Película</string>
    <string name="top_10">Top 10</string>
    <string name="Favoritas">Favoritas</string>
    <string name="buscar_pelicula">Buscar Película</string>
    <string name="enviar_por_sms">Enviar por SMS</string>
    <string name="rating_1_0">Rating: 1.0</string>
    <string name="release_date_2024_11_22">Release Date: 2024-11-22</string>
    <string name="cargando_t_tulo">Cargando Título...</string>
    <string name="cargando_descripci_n">Cargando Descripción...\n</string>
    <string name="cargando_fecha">Cargando Fecha...</string>
    <string name="cargando_rating">Cargando Rating...</string>
    <string name="compartir">Compartir</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_el_a_o">Ingrese el año</string>
    <string name="log_out">Log Out</string>

    <string name="facebook_app_id">503751368947090</string>
    <string name="fb_login_protocol_scheme">fb503751368947090</string>
    <string name="default_web_client_id">582937957307-dpp2eatvls7re6rtsm2hshvicb27a09n.apps.googleusercontent.com</string>
    <string name="facebook_client_token">3525e125525f0779dc56bc8b29a7bcce</string>
    <string name="action_edit_user">Edit User</string>

    <string name="google_maps_key">AIzaSyAER7D-uvYpBOG3wZjz9z3AeGulqAci-OU</string>


</resources>